[package]
name = "mega-security-rs"
description = "An implementation of Mega's security whitepaper"
repository = "https://github.com/hellbound22/mega-security-rs"
authors = ["Rodrigo Mauricio <rodrigomauricio@protonmail.com>"]
license = "MIT"
keywords = ["mega", "auth", "session", "security", "whitepaper"]
categories = ["authentication", "algorithms", "cryptography", "web-programming", "authentication"]
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
pbkdf2 = "0.12.2"
hmac = "0.13.0-pre.4"  
sha2 = "0.10"  
aes-gcm = "0.10.3"
thiserror = "1.0.64"
base64 = "0.22.1"
rsa = "0.9.6"
ecb = { version = "0.1.2", features = ["alloc"] }
